services/dev/patient-ai-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-ai-api
  namespace: <class 'jinja2.utils.Namespace'>
  labels:
    app.kubernetes.io/name: patient-ai-api
    app.kubernetes.io/managed-by: platform-generator
spec:
  selector:
    app.kubernetes.io/name: patient-ai-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
